tests/NormalTests/paczka1/fuzzy1/59626742.err
Error in line 6: AuB A815 477,\
Error in line 21: eyz5848Y A494 200,7
Error in line 20: 6ro4M A494 31,2
Error in line 26: pShPF2t7y A815 94,2
Error in line 22: eyz5848Y A815 29,0
Error in line 18: A494 S621 34,1
Error in line 34: yXDKH6o A170 37,2
